# Ziggurat

./: CMakeLists.txt  LICENSE  README.md
Include/Ziggurat/: Ziggurat.h  ZigguratEnums.h
Source/: CMakeLists.txt  Main.c  ZigInternal.h  ZigWin.c  ZigXCB.c
